# verifCam

./: CMakeLists.txt  README.md  verifCam.cpp
